# light-sample-program

./: .gitignore  Cargo.toml  README.md  build.rs  program  write_color
.cargo/: config
byte-copy/: Cargo.toml
byte-copy/src/: lib.rs
simulator/: Cargo.toml
simulator/src/: main.rs
src/: lib.rs  projection.rs  rand.rs  util.rs
src/programs/: current.rs  example.rs  flow.rs  gradients.rs  grid.rs  line.rs  mod.rs  nonlinear.rs  oops.rs  pulse.rs  receive.rs  tides.rs  twinkle.rs  valentine.rs
src/util/: colors.rs  interpolate.rs  mod.rs
write/: Cargo.toml
write/examples/: grid.rs  receive.rs
write/src/: lib.rs
