[package]
name = "light-program"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[dependencies]
pin-project = "1.0.3"

[features]
default = ["flow"]
twinkle = []
oops = []
example = []
flow = []