bench = []
bin = []
example = []
test = []
[badges.maintenance]
status = "none"

[build-dependencies]
cargo_toml = "0.8.1"
toml = "0.5.8"

[dependencies]
nikisas = "0.1.0"
pin-project = "1.0.3"

[dependencies.futures]
default-features = false
features = []
optional = false
version = "0.3.8"

[dev-dependencies]

[features]
current = []
example = []
flow = []
gradients = []
nonlinear = []
oops = []
receive = []
tides = []
twinkle = []

[lib]
bench = true
crate-type = ["cdylib"]
doc = true
doctest = true
harness = true
plugin = false
proc-macro = false
required-features = []
test = true

[package]
authors = ["Izzy Swart <zenerboson@gmail.com>"]
autobenches = true
autobins = true
autoexamples = true
autotests = true
categories = []
edition = "2018"
keywords = []
name = "light-program"
publish = true
version = "0.1.0"

[patch]
[profile.release]
lto = true
opt-level = "z"
panic = "abort"

[target]
