bench = []
bin = []
test = []

[[example]]
bench = true
crate-type = ["cdylib"]
doc = true
doctest = true
harness = true
name = "wasm"
path = "src/lib.rs"
plugin = false
proc-macro = false
required-features = []
test = true
[badges.maintenance]
status = "none"

[build-dependencies]
cargo_toml = "0.8.1"
toml = "0.5.8"

[dependencies]
nikisas = "0.1.0"
pin-project = "1.0.3"

[dependencies.byte_copy]
features = []
optional = false
path = "./byte-copy"

[dependencies.futures]
default-features = false
features = []
optional = false
version = "0.3.8"

[dependencies.num-traits]
default-features = false
features = []
optional = false
version = "0.2.14"

[dev-dependencies]

[features]
_simulator = []
current = []
example = []
flow = []
gradients = []
grid = []
nonlinear = []
oops = []
receive = []
tides = []
twinkle = []

[lib]
bench = true
crate-type = ["rlib"]
doc = true
doctest = true
harness = true
plugin = false
proc-macro = false
required-features = []
test = true

[package]
authors = ["Izzy Swart <zenerboson@gmail.com>"]
autobenches = true
autobins = true
autoexamples = true
autotests = true
categories = []
edition = "2018"
keywords = []
name = "light-program"
publish = true
version = "0.1.0"

[patch]
[profile.release]
lto = true
opt-level = "z"

[target]

[workspace]
default-members = ["byte-copy", "."]
exclude = []
members = ["byte-copy", ".", "write", "simulator"]
